# lingwa

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml
.claude/agents/: auth-flow.md  db-migration.md  frontend-dev.md
.claude/skills/frontend-architecture/: SKILL.md
.claude/skills/react-style-guide/: SKILL.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_email.py
backend/alembic/: env.py
backend/alembic/versions/: 76fc1fd4c587_initial.py  a3f8c2e1d5b9_add_password_reset_token_fields.py
backend/app/: main.py
backend/app/api/: article.py  auth.py  deps.py
backend/app/core/: config.py  security.py
backend/app/crud/: user.py
backend/app/models/: __init__.py  base.py  language.py  user.py
backend/app/schemas/: __init__.py  language.py  user.py
backend/app/services/: nlp.py  translation.py
backend/app/services/email/: __init__.py  base.py  resend_service.py  templates.py
backend/scripts/: build_nl_dict.py  download_argos_model.py
backend/tests/: conftest.py  test_article_endpoint.py  test_build_nl_dict.py  test_nlp.py  test_translation.py
docs/: architecture.md  database.md
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/ui/: FormField.tsx
frontend/src/context/auth/: AuthContext.tsx  useAuth.ts
frontend/src/hooks/: useAppForm.ts  useSpeech.ts
frontend/src/schemas/: auth.ts
(+7 files in other folders)
